syntax = "proto3";
package proto;

option go_package = "./proto";

import "common.proto";
// DO NOT REMOVE THE COMMENTS
// BEGIN GENERATED
// HunterTalents message.
message HunterTalents {
}

// END GENERATED

enum PetSpec {
	Ferocity = 0;
	Tenacity = 1;
	Cunning = 2;
}

enum HunterStingType {
	NoSting = 0;
	ScorpidSting = 1;
	SerpentSting = 2;
}

message HunterOptions {
	enum PetType {
		PetNone        = 0;
		Bat            = 1;
		Bear           = 2;
		BirdOfPrey     = 3;
		Boar           = 4;
		CarrionBird    = 5;
		Cat            = 6;
		Chimaera       = 7;
		CoreHound      = 8;
		Crab           = 9;
		Crocolisk      = 10;
		Devilsaur      = 11;
		Dragonhawk     = 12;
		Gorilla        = 13;
		Hyena          = 14;
		Moth           = 15;
		NetherRay      = 16;
		Raptor         = 17;
		Ravager        = 18;
		Rhino          = 19;
		Scorpid        = 20;
		Serpent        = 21;
		Silithid       = 22;
		Spider         = 23;
		SpiritBeast    = 24;
		SporeBat       = 25;
		Tallstrider    = 26;
		Turtle         = 27;
		WarpStalker    = 28;
		Wasp           = 29;
		WindSerpent    = 30;
		Wolf           = 31;
		Worm           = 32;
		ShaleSpider    = 33;
		Fox            = 34;

		// new additions in MoP
		Goat           = 35;
		Porcupine      = 36;
		Monkey         = 37;
		Basilisk       = 38;
		Crane          = 39;
		Dog            = 40;
		Beetle         = 41;
		Quilen         = 42;
		WaterStrider   = 43;
	}

	PetType pet_type = 2;

	PetSpec pet_spec = 3;
	double pet_uptime = 4;
	double time_to_trap_weave_ms = 5;
	bool use_hunters_mark = 6;
	bool use_aq_tier = 7;
	bool use_naxx_tier = 8;
	double glaive_toss_success = 9;
}

message BeastMasteryHunter {
	message Rotation {
		RotationType type = 9;
		HunterStingType sting = 5;

		bool trap_weave = 1;

		// Switch to Aspect of the Viper when mana goes below this percent.
		double viper_start_mana_percent = 6;
		// Switch back to Aspect of the Hawk when mana goes above this percent.
		double viper_stop_mana_percent = 7;

		// Allow use of Explosive Shot Rank 3 during LNL procs.
		bool allow_explosive_shot_downrank = 10;

		bool multi_dot_serpent_sting = 11;
	}
	message Options {
		HunterOptions class_options = 1;
	}
	Options options = 1;
}

message MarksmanshipHunter {
	message Rotation {
		RotationType type = 9;
		HunterStingType sting = 5;

		bool trap_weave = 1;

		// Switch to Aspect of the Viper when mana goes below this percent.
		double viper_start_mana_percent = 6;
		// Switch back to Aspect of the Hawk when mana goes above this percent.
		double viper_stop_mana_percent = 7;

		// Allow use of Explosive Shot Rank 3 during LNL procs.
		bool allow_explosive_shot_downrank = 10;

		bool multi_dot_serpent_sting = 11;
	}
	message Options {
		HunterOptions class_options = 1;
	}
	Options options = 1;
}

message SurvivalHunter {
	message Rotation {
		RotationType type = 9;
		HunterStingType sting = 5;

		bool multi_dot_serpent_sting = 11;
	}
	message Options {
		HunterOptions class_options = 1;
	}
	Options options = 1;
}
